fixed z-index issue and enhanced style #63

--- a/imports/ui/components/connectionStatus/theme.scss
+++ b/imports/ui/components/connectionStatus/theme.scss
@@ -2,9 +2,13 @@
 @import "~react-toolbox/lib/button/config";
 
 .snackbar {
-  top: -14px;
-  width: 100%;
-  height: 65px;
-  z-index: 302;
+  top: 0;
+  right: 0;
+  height: 64px;
   left: 0;
+  border-radius: 0;
+  margin-top: 0;
+  &:not(.active) {
+    transform: translateY(-100%);
+  }
 }
